--- a/2.0Flex.css
+++ b/2.0Flex.css
@@ -125,10 +125,9 @@ a:visited {
     position: relative;
     z-index: 2;
     bottom: 26rem;
-    left: 6rem;
+    left: -3rem;
     background-color: white;
-    margin-right: 4rem;
-    padding-right: 15rem;
+    
     
     
 }
@@ -233,9 +232,13 @@ form {
     position: relative;
     bottom:  26rem;
     z-index: 4;
-    background-color: white;
+    background-color: rgb(246,249,249);
     height: 30rem;
 
+}
+
+.grey {
+    background-color: rgb(246,249,249);
 }
 
 .wrkfeat {
@@ -267,3 +270,203 @@ form {
     left: 45%;
     
 }
+
+.thatdiv {
+    display: flex;
+    justify-content: center;
+    margin-top: 3.5rem;
+    margin-right: 5rem;
+}
+
+.thatdiv img:nth-child(2) {
+    width: 8.5rem;
+    margin-left: 11rem;
+    margin-right: 10rem;
+}
+
+.perform {
+    display: flex;
+    flex-direction: column;
+    margin-left: 24rem;
+}
+
+.perform h1 {
+    font-size: 3rem;
+    font-weight: bolder;
+    color: rgb(101, 186, 92);
+    margin-top: 5.5rem;
+}
+
+.wrdpc {
+    position: relative;
+    top: -6rem;
+    left: 25rem;
+}
+
+
+
+.anotherline {
+    position: relative;
+    bottom: 6.4rem;
+    border-width: 1.1px;
+    border-style: solid;
+    border-color: rgb(184, 225, 238);
+    border-image: initial;
+}
+
+.page3 {
+    background-color: rgb(246,249,249);
+    position: relative;
+    bottom: 28rem;
+    height: 62rem;
+    width: 100%;
+}
+
+.align {
+    position: absolute;
+    z-index: 7;
+    text-align: center;
+    top: 50rem;
+    width: 100%;
+    margin-top: 3.9rem;
+    background-color: white;
+}
+
+.wrkfeat {
+    display: flex;
+    justify-content: center;
+    padding-top: 6rem;
+    margin: 1rem;
+    color: rgb(57,192,231);
+}
+
+.wrkfeat h1:nth-child(1) {
+    font-weight: lighter;
+}
+
+.wrkfeat h1 {
+    font-size: 5rem;
+    margin: 0.5rem;
+}
+
+.thisdiv {
+    width: 12rem;
+    position: relative;
+    left: 44%;
+    border-color: rgb(57, 192, 231);
+}
+
+.pictures {
+    display: flex;
+    justify-content: center;
+}
+
+.pictures img {
+    width: 26rem;
+    margin-top: 4rem;
+}
+
+.pictures img:nth-child(2) {
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+
+.outerbox {
+    display: flex;
+    flex-direction: column;
+    object-fit: none;
+    height: 15rem;
+    position: relative;
+    top: 35rem;
+    background: linear-gradient(90deg, rgb(50, 185, 229) 0%, rgb(76, 166, 226) 35%, rgb(52, 162, 235) 63%, rgb(92, 168, 235) 91%);
+}
+
+.almost {
+    height: 30rem;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    bottom: 19rem;
+    font-family: Bitter, serif;
+    background: linear-gradient(90deg, rgb(50, 185, 229) 0%, rgb(76, 166, 226) 35%, rgb(52, 162, 235) 63%, rgb(92, 168, 235) 91%);
+}
+
+#leftbrd {
+    align-content: center;
+}
+
+.numbs {
+    font-size: 8rem;
+    color: white;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    font-family: "Josefin Slab", serif;
+}
+
+.asds {
+    color: rgb(31, 100, 121);
+    font-family: Ubuntu, sans-serif;
+    font-size: 1.6rem;
+    font-weight: bolder;
+    margin-left: 7rem;
+}
+
+.hrzont {
+    height: 15rem;
+    margin-top: 4rem;
+    border-style: solid;
+    border-color: rgb(57, 192, 231);
+}
+
+.numbs {
+    font-size: 8rem;
+    color: white;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    font-family: "Josefin Slab", serif;
+}
+
+#innerbox {
+    text-align: center;
+    position: relative;
+    bottom: 20rem;
+    left: 31.9%;
+    width: 47rem;
+}
+
+footer {
+    height: 12rem;
+    background-color: rgb(5, 31, 39);
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 31rem;
+}
+
+.football {
+    display: flex;
+    align-items: center;
+}
+
+.flexfoot {
+    margin-right: 10rem;
+    color: rgb(112, 112, 112);
+    font-family: serif;
+    font-size: 1.4rem;
+}
+
+.spacer-right {
+    display: flex;
+    margin-left: 20rem;
+    font-size: 1.4rem;
+}
+
+.spacer-right a:link {
+    color: rgb(112, 112, 112);
+}
+
+
