--- a/2.0Flex.css
+++ b/2.0Flex.css
@@ -383,6 +383,8 @@ form {
 
 .almost {
     height: 30rem;
+    padding-left: 5%;
+    padding-right: 9%;
     display: flex;
     justify-content: center;
     position: relative;
@@ -434,7 +436,9 @@ form {
     text-align: center;
     position: relative;
     bottom: 20rem;
-    left: 31.9%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3rem;
     width: 47rem;
 }
 
