--- a/2.0Flex.css
+++ b/2.0Flex.css
@@ -333,6 +333,7 @@ form {
     justify-content: center;
     padding-top: 6rem;
     margin: 1rem;
+    margin-top: 2.4rem;
     color: rgb(57,192,231);
 }
 
